--- a/index.html
+++ b/index.html
@@ -48,16 +48,14 @@
                 type="range"
                 id="jobSpawnRateMultiplierSlider"
                 name="jobSpawnRateMultiplier"
-                min="0.1"
-                max="20"
-                step="0.1"
+                min="5"
+                max="50"
+                step="1"
               />
               <span id="jobSpawnRateMultiplierValue">0</span>
             </div>
             <div>
-              <label for="jobTimeoutDurationSlider"
-                >İş Zaman Aşımı Süresi (s):</label
-              >
+              <label for="jobTimeoutDurationSlider">İş Zaman Aşımı (s):</label>
               <input
                 type="range"
                 id="jobTimeoutDurationSlider"
@@ -167,6 +165,28 @@
           </select>
         </div>
         <div
+          class="chart-type-selector"
+          style="text-align: center; margin-bottom: 15px"
+        >
+          <input
+            type="radio"
+            id="mabQValueRadio"
+            name="mabChartType"
+            value="q_value"
+            checked
+          />
+          <label for="mabQValueRadio" style="margin-right: 10px"
+            >Ort. Net Kâr (Q-Değeri)</label
+          >
+          <input
+            type="radio"
+            id="mabSelectionCountRadio"
+            name="mabChartType"
+            value="selection_count"
+          />
+          <label for="mabSelectionCountRadio">Seçim Sayısı</label>
+        </div>
+        <div
           class="chart-container"
           style="
             position: relative;
@@ -177,6 +197,35 @@
           "
         >
           <canvas id="mabArmChartCanvas"></canvas>
+        </div>
+      </div>
+
+      <div
+        class="mab-auction-stats-chart-section"
+        style="
+          padding: 20px;
+          background-color: #ffffff;
+          border: 1px solid #dce4ec;
+          border-radius: 8px;
+          box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+          width: 100%;
+          margin: 25px auto 0 auto;
+        "
+      >
+        <h2 style="text-align: center; margin-bottom: 20px">
+          Seçili İşçi için MAB Kolu İhale Sonuçları
+        </h2>
+        <div
+          class="chart-container"
+          style="
+            position: relative;
+            height: 400px;
+            width: 90%;
+            max-width: 800px;
+            margin: 20px auto;
+          "
+        >
+          <canvas id="mabAuctionStatsChartCanvas"></canvas>
         </div>
       </div>
     </div>
